# Qt-Software-Group7

./: .gitignore  README.md  for_md.py  github目录结构介绍.md  gotocelldialog.cpp  gotocelldialog.h
03rd-week-homework/QT4-2_1-dialog/: CMakeLists.txt  QT4-2_1-dialog_knowledge_base.md  main.cpp  widget.cpp  widget.h
03rd-week-homework/QT4-2_3-dialog/: CMakeLists.txt  QT4-2_3-dialog_knowledge_base.md  widget.cpp  widget.h
03rd-week-homework/QT4-2_3-gotocell/: CMakeLists.txt  QT4-2_3-gotocell_knowledge_base.md  gotocelldialog.cpp  gotocelldialog.h  gotocelldialog.ui  main.cpp
04rd-week-homework/QT-6-2-Button/: button.cpp  button.h  main.cpp
04rd-week-homework/QT4-1_3-age-remake/: QT4-1_3-age-remake.pro  age.cpp
04rd-week-homework/QT4-2_1-finddialog-nullptr/: finddialog.h  main.cpp
04rd-week-homework/QT6-2-closeEvent/: closeevent.ui
04rd-week-homework/QT6-2-handling/: QT6-2-Handling.pro
04th-week-homework/QT02_Exit-program/: CMakeLists.txt  QT02_Exit-program_knowledge_base.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
04th-week-homework/QT4-1_3-age/: CMakeLists.txt  QT4-1_3-age_knowledge_base.md  age_widget.cpp  age_widget.h  main.cpp
04th-week-homework/QT4-1_3-age-remake/: age.h  age.ui  main.cpp
04th-week-homework/QT4-2_1-finddialog-nullptr/: QT4-2_1-finddialog-nullptr.pro  finddialog.cpp  finddialog.h  finddialog.ui
04th-week-homework/QT4-2_2-dialog/: CMakeLists.txt  QT4-2_2-dialog_knowledge_base.md  widget.cpp  widget.h  widget.ui
04th-week-homework/QT6-2-closeEvent/: QT6-2-closeEvent.pro  closeevent.cpp  closeevent.h  main.cpp
04th-week-homework/dialog-libary/QT4_2-3_dialog-library/: CMakeLists.txt  QT4_2-3_dialog-library_global.h  QT4_2-3_dialog-library_knowledge_base.md  widget.h  widget.ui
04th-week-homework/dialog-libary/dialog-call-demo/: CMakeLists.txt  dialog-call-demo_knowledge_base.md  main.cpp
05rd-week-homework/QT6-2-button/: button.h  mainwindow.h
05rd-week-homework/QT6-2-handling/: label.cpp  label.h  window.h
05th-week-homework/QT-6-2-Button/: QT-6-2-Button.pro  button.cpp  button.h
05th-week-homework/QT02_Button-program/: CMakeLists.txt  QT02_Button-program_knowledge_base.md  button.cpp  button.h  button_program.cpp  button_program.h  button_program.ui  main.cpp
05th-week-homework/QT02_event-handling/: CMakeLists.txt  QT02_event-handling_knowledge_base.md  event_handling.cpp  event_handling.h  event_handling.ui  main.cpp  worker.cpp  worker.h
05th-week-homework/QT6-2-Qthread/: CMakeLists.txt  main.cpp
05th-week-homework/QT6-2-handling/: main.cpp  window.cpp
06th-week-homework/QT4_2-4_SortDialog/: CMakeLists.txt  QT4_2-4_SortDialog_knowledge_base.md  main.cpp  sortdialog.cpp  sortdialog.h  sortdialog.ui
06th-week-homework/qt-lib-test/GoToCellDialog/: CMakeLists.txt  GoToCellDialog_global.h  GoToCellDialog_knowledge_base.md  gotocelldialog.cpp  gotocelldialog.h  gotocelldialog.ui
06th-week-homework/qt-lib-test/qt-lib-call/: CMakeLists.txt  main.cpp  qt-lib-call_knowledge_base.md
07th-week-homework/Spreadsheet/: CMakeLists.txt  finddialog.cpp  finddialog.h  main.cpp  spreadsheet.cpp  spreadsheet.h  window.cpp  window.h
age/: CMakeLists.txt  main.cpp  widget.h
exit_progarm/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
finddialog/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
gotocell/: gotocell.pro  gotocelldialog.ui  main.cpp
